Fix bound signature assigment in sum aggregation.